Remove duplicates, correct typos
Change-Id: Idada59eb545912620edc2d5defa9f9509668d753

--- a/prebuilt/common/etc/init.local.rc
+++ b/prebuilt/common/etc/init.local.rc
@@ -5,3 +5,13 @@ service compcache /system/bin/handle_compcache
     user root
     group root
     oneshot
+
+#Add init.d
+# Execute files in /etc/init.d before booting
+#service userinit /system/xbin/busybox run-parts /system/etc/init.d
+#    disabled
+#    oneshot
+# Execute files in /etc/init.d before booting
+#service sysinit /system/bin/logwrapper /system/xbin/busybox run-parts /system/etc/init.d
+#    disabled
+#    oneshot
